--- a/limitting_balls_2D.ipynb
+++ b/limitting_balls_2D.ipynb
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generating arbitrary points\n",
+    "# multiple reference points\n",
     "x1 = np.array([0.8, 2.8 ])\n",
     "x2 = np.array([2.1, 1.3])\n",
     "x3 = np.array([0.7, 1.5])"
@@ -265,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generating arbitrary points\n",
+    "# multiple reference points\n",
     "x1 = np.array([-40,40])\n",
     "x2 = np.array([-20,20]) \n",
     "x3 = np.array([30,-30])"
@@ -441,11 +441,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate two arbitrary starting points\n",
+    "# multiple starting points\n",
     "x01 = np.array([-20,10])\n",
     "x02 = np.array([20,-5])\n",
     "\n",
-    "# Generate two arbitrary reference points\n",
+    "# multiple reference points\n",
     "x1 = np.array([-2.23522069,  1.45201193])\n",
     "x2 = np.array([-0.64770123, -0.49563703])"
    ]
@@ -624,11 +624,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate two arbitrary starting points\n",
+    "# multiple starting points\n",
     "x01 = np.array([-10,28])\n",
     "x02 = np.array([15.8,12.3])\n",
     "\n",
-    "# Generate two arbitrary reference points\n",
+    "# multiple reference points\n",
     "x1 = np.random.randn(2,)\n",
     "x2 = np.random.randn(2,)"
    ]
