--- a/limitting_balls_2D.ipynb
+++ b/limitting_balls_2D.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,28 +247,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_0 is in row space of noisy_A False\n"
+     ]
+    }
+   ],
    "source": [
     "# Running the RK algorithm and generate the sequence of its iterates\n",
     "  \n",
     "n_iter = 40  # number of iterations\n",
     "x_0 =  np.array([0,60])  # starting point\n",
+    "print(\"x_0 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x_0))))\n",
     "path = RK(noisy_A,noisy_b)\n",
     "path = np.array(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1 is in row space of noisy_A False\n",
+      "x2 is in row space of noisy_A False\n",
+      "x3 is in row space of noisy_A False\n"
+     ]
+    }
+   ],
    "source": [
     "# multiple reference points\n",
     "x1 = np.array([-40,40])\n",
     "x2 = np.array([-20,20]) \n",
-    "x3 = np.array([30,-30])"
+    "x3 = np.array([30,-30])\n",
+    "print(\"x1 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x1))))\n",
+    "print(\"x2 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x2))))\n",
+    "print(\"x3 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x3))))"
    ]
   },
   {
@@ -582,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,17 +642,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x01 is in row space of noisy_A False\n",
+      "x02 is in row space of noisy_A False\n",
+      "x1 is in row space of noisy_A False\n",
+      "x2 is in row space of noisy_A False\n"
+     ]
+    }
+   ],
    "source": [
     "# multiple starting points\n",
     "x01 = np.array([-10,28])\n",
     "x02 = np.array([15.8,12.3])\n",
+    "print(\"x01 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x01))))\n",
+    "print(\"x02 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x02))))\n",
     "\n",
     "# multiple reference points\n",
     "x1 = np.random.randn(2,)\n",
-    "x2 = np.random.randn(2,)"
+    "x2 = np.random.randn(2,)\n",
+    "print(\"x1 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x1))))\n",
+    "print(\"x2 is in row space of noisy_A\", np.linalg.matrix_rank(noisy_A.T) == np.linalg.matrix_rank(np.column_stack((noisy_A.T, x2))))\n"
    ]
   },
   {
