--- a/comparing_bounds_noisy.ipynb
+++ b/comparing_bounds_noisy.ipynb
@@ -83,7 +83,25 @@
     "y = noisy_A@np.random.randn(n,)  # y is a vector in the column space of noisy_A\n",
     "beta = 10\n",
     "noisy_b = y + beta*w\n",
-    "# noisy_b = np.zeros((m,))"
+    "# noisy_b = np.zeros((m,))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ####### Using Real-World Data\n",
+    "# data = pd.read_csv('a1a.csv', sep=',', header=None)\n",
+    "# print(data.head())\n",
+    "# m = data.shape[0]\n",
+    "# n = data.shape[1]-1\n",
+    "# noisy_A = np.array(data.iloc[: , 0:n])\n",
+    "# noisy_b = np.array(data.iloc[: , -1])\n",
+    "\n",
+    "# rank_noisy_A = np.linalg.matrix_rank(noisy_A)\n",
+    "# augg = np.column_stack((noisy_A,noisy_b))\n",
+    "# rank_aug = np.linalg.matrix_rank(augg)\n",
+    "# print(\"noisy_A is full rank:\", rank_noisy_A==n)\n",
+    "# print(\"rank(noisy_A) = \",rank_noisy_A)\n",
+    "# print(\"rank(noisy_A|noisy_b) = \",rank_aug)\n",
+    "# print(\"system is consistent:  \", rank_noisy_A == rank_aug)"
    ]
   },
   {
@@ -205,7 +223,7 @@
     "plt.plot(approx_error_sqrt, label=r'$\\sqrt{\\mathbf{\\mathbb{E}}\\left[\\Vert x_k-x_0^n- x_{*}^r \\Vert ^2 \\right]}$', color='#377eb8', linewidth=3, marker=\"^\", markersize=10, markevery=20000)\n",
     "plt.plot(approx_error_norm, label=r'$\\Vert \\mathbf{\\mathbb{E}}\\left[x_k\\right]-x_0^n- x_{*}^r \\Vert$', color = '#984EA3', linewidth=3, marker=\"x\", markersize=15, markeredgewidth=2, markevery=23000)\n",
     "\n",
-    "#plt.title(r'$m=%d$'%(m)+',  '+r'$n=%d$'%(n)+',  '+r'$rank(\\widetilde A)=%d$'%(r), fontsize = 24)\n",
+    "plt.title(r'$m=%d$'%(m)+',  '+r'$n=%d$'%(n)+',  '+r'$rank(\\widetilde A)=%d$'%(np.linalg.matrix_rank(noisy_A)), fontsize = 24)\n",
     "plt.xlabel(\"Iterations\",fontsize = 26)\n",
     "plt.rcParams['xtick.labelsize']=24\n",
     "plt.rcParams['ytick.labelsize']=24\n",
