--- a/comparing_bounds_noisy.ipynb
+++ b/comparing_bounds_noisy.ipynb
@@ -10,14 +10,8 @@
     "# importing dependencies\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import linalg\n",
-    "from random import random\n",
     "import pandas as pd\n",
-    "import math\n",
-    "from sympy import * \n",
-    "from scipy.linalg import null_space\n",
-    "import matplotlib\n",
-    "import random"
+    "from scipy.linalg import null_space\n"
    ]
   },
   {
