--- a/limitting_balls_2D.ipynb
+++ b/limitting_balls_2D.ipynb
@@ -9,12 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import linalg\n",
-    "from random import random\n",
-    "import math\n",
-    "from sympy import * \n",
-    "from scipy.linalg import null_space\n",
-    "import matplotlib"
+    "from scipy.linalg import null_space\n"
    ]
   },
   {
